--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "framer-motion": "^7.3.2",
     "react": "^18.0.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18.0.0",
+    "react-facebook-pixel": "^1.0.4",
     "react-github-btn": "^1.4.0",
     "react-modal": "^3.15.0",
     "react-rnd": "^10.3.7",
