--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Treact",
-  "name": "Treact - Modern React Templates and Components for building Landing Pages",
+  "short_name": "Tô nón lá",
+  "name": "Tô nón lá - Nơi cùng nhau sáng tạo trên chiếc nón lá Việt Nam",
   "icons": [
     {
       "src": "favicon.ico",
