--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^5.16.6",
+    "@mui/material": "^5.16.6",
+    "@react-three/drei": "^9.109.2",
+    "@react-three/fiber": "^8.16.8",
     "@splidejs/react-splide": "^0.7.12",
     "@testing-library/jest-dom": "^5.16.0",
     "@testing-library/react": "^13.4.0",
@@ -10,6 +16,7 @@
     "axios": "^1.7.2",
     "feather-icons": "^4.29.0",
     "framer-motion": "^7.3.2",
+    "lodash": "^4.17.21",
     "react": "^18.0.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-datepicker": "^6.9.0",
@@ -24,6 +31,7 @@
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.5",
     "tailwindcss": "^3.0.0",
+    "three": "^0.167.0",
     "twin.macro": "^3.0.0-rc.4"
   },
   "scripts": {
